roles/vault/files/vault-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vault
  namespace: vault
spec:
  addPrefix:
    prefix: /ui
