roles/vault/files/vault-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`vault.local.lan`) 
    kind: Rule
    middlewares:
     - name: vault
    services:
    - name: vault
      port: 8200
