roles/vault/files/vault-ingressroute.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: vault-ingress
  namespace: vault
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`vault.local.lan`) 
    kind: Rule
    # middlewares:
    #  - name: vault
    services:
    - name: vault
      port: 8200
